--- a/StylistEye/Resources/Localization/Strings/Base.lproj/Login.strings
+++ b/StylistEye/Resources/Localization/Strings/Base.lproj/Login.strings
@@ -7,6 +7,6 @@
 */
 
 "SE-Login-Forgotpassword" = "Forgot your password?";
-"SE-Login-Login" = "LOGIN";
+"SE-Login-Login" = "Login";
 "SE-Login-Password" = "Password";
 "SE-Login-Email" = "Email";
