Added images, network responses and some controllers

--- a/StylistEye/Resources/Localization/Strings/Main.strings
+++ b/StylistEye/Resources/Localization/Strings/Main.strings
@@ -16,3 +16,14 @@
 "SE-Main-About" = "O nás";
 "SE-Main-Logout" = "Logout";
 "SE-Main-Menu" = "Menu";
+
+"SE-Main-Pants" = "Kalhoty";
+"SE-Main-Dress" = "Šaty";
+"SE-Main-Jacket" = "Kabáty / bundy";
+"SE-Main-Shoe" = "Boty";
+"SE-Main-Shirt" = "Trička";
+
+"SE-Main-Cap" = "Volný čas";
+"SE-Main-Work" = "Zaměstnání";
+"SE-Main-Bussiness" = "Společenské";
+"SE-Main-Earings" = "Doplňky";
