Added settings & language controller

--- a/StylistEye/Resources/Localization/Strings/Main.strings
+++ b/StylistEye/Resources/Localization/Strings/Main.strings
@@ -11,6 +11,7 @@
 "SE-Main-Wardrobe" = "Šatník";
 
 "SE-Main-Language" = "Jazyk";
+"SE-Main-Languages" = "Jazyky";
 "SE-Main-Privacy" = "Privacy & Safety";
 "SE-Main-Note" = "Obchodní podmínky";
 "SE-Main-About" = "O nás";
