Added oufit feed, messages, new graphic, API commands and fixed some bugs

--- a/StylistEye/Resources/Localization/Strings/Main.strings
+++ b/StylistEye/Resources/Localization/Strings/Main.strings
@@ -9,6 +9,7 @@
 "SE-Main-Questionnaire" = "Dotazník";
 "SE-Main-Outfit" = "Outfity";
 "SE-Main-Wardrobe" = "Šatník";
+"SE-Main-Messages" = "Zprávy";
 
 "SE-Main-Language" = "Jazyk";
 "SE-Main-Languages" = "Jazyky";
