--- a/StylistEye/Resources/Localization/Strings/Main.strings
+++ b/StylistEye/Resources/Localization/Strings/Main.strings
@@ -29,3 +29,5 @@
 "SE-Main-Work" = "Zaměstnání";
 "SE-Main-Bussiness" = "Společenské";
 "SE-Main-Earings" = "Doplňky";
+
+"SE-Main-Outfit-overview" = "Celkový outfit";
